# Auto_Clicker

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
resource/: resource.qrc  resource.rc
